# rescue_codex

./: .gitattributes  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
fixtures/: codex-session-sample.jsonl  duplicate-session-sample.jsonl  generic-messages.json  malformed-jsonl-sample.jsonl
scripts/: build.cmd  build.mjs  build.sh  dev.cmd  dev.mjs  dev.sh  tauri.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: api.rs  parser.rs
src-tauri/src/parsers/: codex_session_jsonl.rs  generic_json.rs  generic_jsonl.rs  mod.rs
src-tauri/src/services/: export_service.rs  import_service.rs  mod.rs  query_service.rs
src/app/: App.tsx  styles.css  theme.tsx
src/app/layout/: AppShell.tsx
src/components/: Button.tsx  EChart.tsx  PageHeader.tsx  Panel.tsx  StatCard.tsx
src/features/dashboard/: AnalyticsToolbar.tsx  ChartsPanel.tsx  DashboardHeaderActions.tsx  GitHubHeatmap.tsx  OverviewCards.tsx  chartAxis.ts  dashboardControls.ts  useDashboardSummary.ts
src/features/imports/: ImportActions.tsx  ImportProgress.tsx  autoSync.ts  importEvents.ts
src/features/sessions/: SessionDetailPanel.tsx
src/features/updates/: AppUpdateManager.tsx  (+1 more)
src/lib/: format.ts  sessionVisibility.ts  tauri.ts
src/types/: api.ts
(+9 files in other folders)
