[package]
name = "rescue_codex"
version = "0.1.2"
description = "Local-first Codex usage analytics desktop app"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "rescue_codex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dirs = "6"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
